# dsa-practice

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: code-quality.yml  tests.yml
dynamic_array/: README.md  solution.py
problems/: __init__.py
problems/1d_dynamic_programming/: coin_change.py  house_robber_ii.py  longest_increasing_subsequence.py  longest_palindromic_substring.py  maximum_product_subarray.py  word_break.py
problems/2d_dynamic_programming/: interleaving_string.py  longest_increasing_path_matrix.py  target_sum.py
problems/advanced_graphs/: network_delay_time.py
problems/arrays/: __init__.py  dynamic_array.py
problems/arrays_and_hashing/: group_anagrams.py  longest_consecutive.py  two_sum.py  valid_sudoku.py
problems/backtracking/: combination_sum.py  combination_sum_ii.py  letter_combinations.py  palindrome_partitioning.py  permutations.py  word_search.py
problems/binary_search/: binary_search.py  search_2d_matrix.py  search_rotated_sorted_array.py  time_based_key_value_store.py
problems/bit_manipulation/: counting_bits.py  number_of_1_bits.py  reverse_integer.py  sum_of_two_integers.py
problems/dp/: README.md
problems/graphs/: README.md  clone_graph.py  course_schedule_ii.py  graph_valid_tree.py  max_area_of_island.py  number_of_connected_components.py  number_of_islands.py  redundant_connection.py  (+3 more)
system_design/: README.md
templates/: README.md  solution_template.py  test_template.py
tests/: __init__.py  test_dynamic_array.py  test_min_window.py
(+323 files in other folders)
